--- a/app/views/microposts/new.html.erb
+++ b/app/views/microposts/new.html.erb
@@ -33,7 +33,7 @@
             <div class="control-label form-align-left">
               <%= f.label :prefecture_id, "都道府県" %>
               <span class="required">※必須</span>
-              <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, {selected: 12}, class: 'form-control input-lg' %>
+              <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, {selected: 12}, class: 'form-control input-lg fix-input-lg' %>
             </div>
           </div>
         </div>
@@ -43,7 +43,7 @@
               <%= f.label :area_id, "市区町村" %>
               <span class="required">※必須</span>
             </div>
-            <%= f.collection_select :area_id, Area.all, :id, :name, {selected: 176}, class: 'form-control input-lg' %>
+            <%= f.collection_select :area_id, Area.all, :id, :name, {selected: 176}, class: 'form-control input-lg fix-input-lg' %>
           </div>
         </div>
         <div class="row">
