--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -101,13 +101,13 @@
       <div class="row">
         <div class="form-group">
           <%= f.label :prefecture_id, "都道府県" %>
-          <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, {}, class: 'form-control input-lg' %>
+          <%= f.collection_select :prefecture_id, Prefecture.all, :id, :name, {}, class: 'form-control input-lg fix-input-lg' %>
         </div>
       </div>
       <div class="row">
         <div class="form-group">
           <%= f.label :area_id, "市区町村" %>
-          <%= f.collection_select :area_id, Area.all, :id, :name, {}, class: 'form-control input-lg' %>
+          <%= f.collection_select :area_id, Area.all, :id, :name, {}, class: 'form-control input-lg fix-input-lg' %>
         </div>
       </div>
 
@@ -185,7 +185,7 @@
                   discard_day: true,
                   include_blank: true
                 },
-                {class: "form-control input-lg"})
+                {class: "form-control input-lg fix-input-lg"})
               %>
             </div>
           </div>
