--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,8 +14,8 @@
       <% if logged_in? %>
         <div class="header-item"><%= link_to "美容師を探す", staffs_path %></div>
         <div class="header-item"><%= link_to "カットモデルを探す", users_path %></div>
-        <div class="header-item"><%= link_to "マイページへ", current_user %></div>
-        <div class="header-item"><%= link_to "個人設定", edit_user_path(current_user) %></div>
+        <div class="header-item"><%= link_to "トーク履歴", current_user %></div>
+        <div class="header-item"><%= link_to "プロフィール編集", edit_user_path(current_user) %></div>
         <div class="header-item"><%= link_to "ログアウト", logout_path, method: :delete %></div>
       <% else %>
         <div class="header-item"><%= link_to "モデル会員登録", signup_page_path %></div>
@@ -30,8 +30,8 @@
     <% if logged_in? %>
       <div class="header-item-hm"><%= link_to "美容師を探す", staffs_path %></div>
       <div class="header-item-hm"><%= link_to "カットモデルを探す", users_path %></div>
-      <div class="header-item-hm"><%= link_to "マイページへ", current_user %></div>
-      <div class="header-item-hm"><%= link_to "個人設定", edit_user_path(current_user) %></div>
+      <div class="header-item-hm"><%= link_to "トーク履歴", current_user %></div>
+      <div class="header-item-hm"><%= link_to "プロフィール編集", edit_user_path(current_user) %></div>
       <div class="header-item-hm"><%= link_to "ログアウト", logout_path, method: :delete %></div>
     <% else %>
       <div class="header-item-hm"><%= link_to "モデル会員登録", signup_page_path %></div>
