--- a/app/views/users/staff_new.html.erb
+++ b/app/views/users/staff_new.html.erb
@@ -1,4 +1,4 @@
-<h1>新規会員登録</h1>
+<h1>新規美容師登録</h1>
 <div class="signup-container">
   <%= form_for @user, url: staff_signup_path do |f| %>
     <%= render 'shared/error_messages', object: f.object %>
