--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Edit user") %>
-<h1>個人設定画面</h1>
+<h1>プロフィール編集</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
     <%= form_for(@user) do |f| %>
