--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,3 +3,17 @@
     無料で髪を切ろう
   </div>
 </div>
+<!-- <div class="row">
+
+</div>
+<div class="row">
+  <div class="col-md-4">
+    a
+  </div>
+  <div class="col-md-4">
+    b
+  </div>
+  <div class="col-md-4">
+    c
+  </div>
+</div> -->
