--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -37,7 +37,7 @@
                   use_two_digit_numbers: true,
                   date_separator: '%s'
                 },
-                { class: 'form-control input-lg' }
+                { class: 'form-control input-lg fix-input-lg' }
               ),
               '年 ', '月 ') + '日'
             %>
@@ -52,7 +52,7 @@
                   default: Time.zone.now.ago(25.years),
                   use_two_digit_numbers: true
                 },
-                { class: 'input-lg col-sm-4 col-xs-4 birth-form-sp' }
+                { class: 'input-lg col-sm-4 col-xs-4 birth-form-sp fix-input-lg' }
               )
               )
             %>
@@ -171,7 +171,7 @@
             <div class="control-label form-align-left">
               <%= f.label :experience, "美容師歴" %>
             </div>
-            <%= f.select :experience, options_for_select(User.experiences), {include_blank: true}, class: "form-control input-lg" %>
+            <%= f.select :experience, options_for_select(User.experiences), {include_blank: true}, class: "form-control input-lg fix-input-lg" %>
             もしくは
             <div class="control-label form-align-left">
               <%= f.label :qualification, "美容師免許取得時期(予定)" %>
