--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,10 +1,10 @@
 // user-index
 .user-item {
-  height: 320px;
+  margin-bottom: 10px;
 }
 
 .user-item img {
-  height: 250px;
+  height: auto;
 }
 
 // user-show
