--- a/app/views/applies/new.html.erb
+++ b/app/views/applies/new.html.erb
@@ -1,7 +1,7 @@
 <h1>応募フォーム</h1>
 
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
     <%= form_for([@micropost, @apply]) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
       <div class="form-group">
