--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,11 +1,11 @@
-<div class="user-item col-md-4 col-sm-6">
+<div class="user-item col-md-4 col-xs-6">
   <% if user.image.present?  %>
     <div><%= link_to cl_image_tag(user.image_url, width: 300, height: 300, crop: :fill, class: 'user-image'), user_path(user) %></div>
   <% else %>
-    <div><%= link_to image_tag('/no-image.png', class: "no-image"), user_path(user) %></div>
+    <div><%= link_to image_tag('/no-image.png', class: "no-image", width: "300", height: "300"), user_path(user) %></div>
   <% end %>
   <div class="user-info"><%= user.sex %>/<%= user.prefecture.name %><%= user.area.name %></div>
-  <div class="">最終ログイン:<%= user.last_accessed_at %></div>
+  <div class="">最終ログイン: <%= user.last_accessed_at %></div>
 
 
   <% if false %>
