--- a/app/views/users/password.html.erb
+++ b/app/views/users/password.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, "Edit user") %>
 <h1>パスワードの再設定</h1>
 <div class="row">
-  <div class="col-md-6 col-md-offset-3">
+  <div class="col-md-6 col-md-offset-3 col-xs-10 col-xs-offset-1">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
       <div class="row">
