--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, @user.name) %>
 
 <div class="row">
-  <aside class="col-md-4 col-xs-4 ">
+  <aside class="col-xs-3">
 
     <section class="stats">
       <%= render 'shared/stats' %>
@@ -10,7 +10,7 @@
 
   </aside>
 
-  <div class="col-md-8 col-xs-8">
+  <div class="col-xs-9">
     <div class="user-info-detail">
       <div>トーク履歴</div>
       <div>
