--- a/app/views/microposts/new.html.erb
+++ b/app/views/microposts/new.html.erb
@@ -52,10 +52,10 @@
               <div class="control-label form-align-left">
                 募集する性別
               </div>
-              <%= t.check_box(:women, {id: "checkbox13"}) %>
-              <label for="checkbox13" class="checkbox">女性</label>
-              <%= t.check_box(:mens, {id: "checkbox14"}) %>
-              <label for="checkbox14" class="checkbox">男性</label>
+              <%= t.check_box(:women, {class: "my_check", id: "my_check_01"}) %>
+              <label for="my_check_01">女性</label>
+              <%= t.check_box(:mens, {class: "my_check", id: "my_check_02"}) %>
+              <label for="my_check_02">男性</label>
             </div>
           </div>
 
