--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -44,12 +44,63 @@ $breakpoint-down: (
   }
 }
 
-input, textarea, select{
-  font-size: 16px !important;
-  background-color: white;
-  -webkit-border-radius : 0;
-  -webkit-appearance : none;
-  -webkit-tap-highlight-color : rgba(0,0,0,0);
+// input, textarea, select {
+//   font-size: 16px !important;
+//   background-color: white;
+//   -webkit-border-radius : 0;
+//   -webkit-appearance : none;
+//   -webkit-tap-highlight-color : rgba(0,0,0,0);
+// }
+input[type="checkbox"].my_check {
+    display: none;
+}
+input[type="checkbox"].my_check + label {
+    display: inline-block;
+    cursor: pointer;
+    margin: 0px;
+}
+input[type="checkbox"].my_check + label::before {
+    width: 30px;
+    height: 30px;
+    line-height: 26px;
+    font-size: 35px;
+    display: inline-block;
+    vertical-align: middle;
+    text-align: center;
+    content: "\2713";
+    color: transparent;
+    margin: 0;
+    padding: 0;
+    border-radius: 5px;
+    border: 3px solid #dddddd;
+    background: #f0f0f0;
+    -webkit-transition: .1s;
+    transition: .1s;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+input[type="checkbox"].my_check + label:hover{
+    color: #808080;
+}
+input[type="checkbox"].my_check + label:hover::before{
+    background-color: #fff;
+}
+input[type="checkbox"].my_check:checked + label{
+    color: #15c;
+}
+input[type="checkbox"].my_check:checked + label::before{
+    font-size: 25px;
+    background: #fff !important;
+    // border-color: #15c !important;
+    color: #15c !important;
+}
+
+.checkbox-inline-block {
+  display: inline-block;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-bottom: 10px;
 }
 
 .fix-input-lg {
