--- a/app/views/prefectures/areas.js.erb
+++ b/app/views/prefectures/areas.js.erb
@@ -2,3 +2,4 @@
 $('#area_id').html("<%= escape_javascript(select_tag :area_id, options_for_select(@areas.pluck(:name, :id)), include_blank: true) %>");
 $('#user_area_id').html("<%= escape_javascript(options_for_select(@areas.pluck(:name, :id))) %>");
 $('#micropost_area_id').html("<%= escape_javascript(options_for_select(@areas.pluck(:name, :id))) %>");
+$('#q_area_id_eq').html("<%= escape_javascript(select_tag :area_id, options_for_select(@areas.pluck(:name, :id)), include_blank: true) %>");
