--- a/app/views/users/_staff_search_form.html.erb
+++ b/app/views/users/_staff_search_form.html.erb
@@ -1,39 +1,44 @@
 <div class="user-index">
   <div class="container">
     <div class="search-hamburger-open-btn">
-      <i class="fa fa-chevron-right"></i>モデル検索画面を開く
+      <i class="fa fa-chevron-right"></i>美容師検索画面を開く
     </div>
     <div class="find-users">
       <div class="search-hamburger-close-btn">
-        <i class="fa fa-chevron-left"></i>モデル検索画面を閉じる
+        <i class="fa fa-chevron-left"></i>美容師検索画面を閉じる
       </div>
       <div class="search-form-inner">
-        <%= form_tag(users_path, method: "get") do %>
+        <%= search_form_for(@search, url: staffs_path) do |f| %>
           <div class="row">
-            <div class="form-group col-md-3">
-              <%= label_tag :name, "名前" %>
-              <%= text_field_tag :name, "", class: "form-control" %>
+            <div class="form-group col-xs-4">
+              <%= f.label :name_cont, "名前" %>
+              <% if params_present?(:name_cont) %>
+                <%= f.text_field :name_cont, value: params[:q][:name_cont], class: "form-control" %>
+              <% else %>
+                <%= f.text_field :name_cont, class: "form-control input-lg" %>
+              <% end %>
             </div>
-
-            <div class="form-group col-md-2">
-              <%= label_tag :sex, "性別" %>
-              <%= select_tag :sex, options_for_select(User.sexes), include_blank: true, class: "form-control" %>
+            <div class="form-group col-xs-4">
+              <%= f.label :sex, "性別" %>
+              <% if params_present?(:sex_eq) %>
+                <%= f.select :sex_eq, options_for_select(User.sexes, selected: params[:q][:sex_eq]), {include_blank: true}, {class: "form-control input-lg"} %>
+              <% else %>
+                <%= f.select :sex_eq, options_for_select(User.sexes), {include_blank: true}, {class: "form-control input-lg"} %>
+              <% end %>
             </div>
-
-            <div class="form-group col-md-2">
-              <%= label_tag :age, "年齢（何歳から）" %>
-              <%= number_field_tag :age_from, "", class: "form-control" %>
+          </div>
+          <div class="row">
+          <div class="form-group col-xs-4">
+            <div class="">
+              <%= f.label :Age, "年齢" %>
+              <%= f.number_field :age_gteq, class: "form-control input-lg"%>以上 ~
+              <%= f.number_field :age_lteq, class: "form-control input-lg" %>以下
             </div>
-            <div class="form-group col-md-2">
-              <%= label_tag :age, "年齢（何歳まで）" %>
-              <%= number_field_tag :age_to, "", class: "form-control" %>
-            </div>
-
           </div>
           <script>
             $(function() {
-              $('#prefecture_id').change(function() {
-                var prefecture_id = $("#prefecture_id").val();
+              $('#q_prefecture_id_eq').change(function() {
+                var prefecture_id = $("#q_prefecture_id_eq").val();
                 if (prefecture_id !== "") {
                   $.get("<%= prefectures_areas_path %>",
                     { prefecture_id: prefecture_id },
@@ -43,35 +48,30 @@
               });
             });
           </script>
-          <div class="row">
-            <div class="form-group col-md-3">
-              <%= label_tag :prefecture_id, "都道府県" %>
-              <%= select_tag :prefecture_id, options_from_collection_for_select(Prefecture.all, :id, :name), include_blank: true, id: "prefecture_id", class: "form-control" %>
+            <div class="form-group col-xs-4">
+              <%= f.label :prefecture_id, "都道府県" %>
+              <% if params_present?(:prefecture_id_eq) %>
+                <%= f.collection_select :prefecture_id_eq, Prefecture.all, :id, :name, {selected: params[:q][:prefecture_id_eq], include_blank: true}, class: 'form-control input-lg fix-input-lg'%>
+              <% else %>
+                <%= f.collection_select :prefecture_id_eq, Prefecture.all, :id, :name, {include_blank: true}, class: 'form-control input-lg fix-input-lg'%>
+              <% end %>
             </div>
-
-            <div class="form-group col-md-3">
-              <%= label_tag :area_id, "市町村区" %>
-              <%= select_tag :area_id, options_from_collection_for_select(Area.all, :id, :name), include_blank: true, id: "area_id", class: "form-control" %>
+            <div class="form-group col-xs-4">
+              <%= f.label :area_id, "市町村区" %>
+              <% if params_present?(:area_id_eq) %>
+                <%= f.collection_select :area_id_eq, Area.all, :id, :name, {selected: params[:q][:area_id_eq], include_blank: true}, class: 'form-control input-lg fix-input-lg' %>
+              <% else %>
+                <%= f.collection_select :area_id_eq, Area.all, :id, :name, {include_blank: true}, class: 'form-control input-lg fix-input-lg' %>
+              <% end %>
             </div>
-            <!-- regionからは検索しない -->
-
           </div>
-
           <div class="row">
-            <div class="form-group col-md-3">
-              <%= label_tag :color, "メンズ練習中" %>
-              <%= check_box_tag(:color, "可能", checked = false, class: "") %>
+            <div class="actions col-md-6">
+              <%= f.submit "上記の条件で検索", class: "btn btn-primary form-control" %>
             </div>
-            <div class="form-group col-md-3">
-              <%= label_tag :hair_extension, "カラー練習中" %>
-              <%= check_box_tag(:hair_extension, "可能", checked = false, class: "") %>
+            <div class="col-md-6">
+              <%= submit_tag "条件をリセット", id: "search-reset-btn", class: "form-control btn btn-default" %>
             </div>
-            <div class="form-group col-md-3">
-              <%= label_tag :nail, "ネイル練習中" %>
-              <%= check_box_tag(:nail, "希望", checked = false, class: "") %>
-            </div>
-
-            <%= submit_tag "検索", id: "user_find_btn", class: "form-control" %>
           </div>
         <% end %>
       </div>
